--- a/wdn/templates_3.0/css/footer/rating.css
+++ b/wdn/templates_3.0/css/footer/rating.css
@@ -18,12 +18,13 @@
    	display:inline;
    	float:left;
    	margin-right:7px;
+   	font-size:90%;
    }
     .cancel,
     .star {
         float: left;
         width: 16px;
-        height: 18px;
+        height: 17px;
         overflow: hidden;
         text-indent: -999em;
         cursor: pointer;
